legacy/grammar.js
        source_file: $ => repeat(seq($._declaration, $._newline)),

        ////////////////////////////////////////////////////////////////////////
        // Comment
        ////////////////////////////////////////////////////////////////////////

        _const_right_arrow: $ => token(choice('->','→')),
        qualified_name: $ => qualified_name,

        _binding_name: $ => alias(choice(
            $.name,
            $.anonymous_name,
        ), $.binding_name),

        // identifiers which may be surrounded by braces or dotted.
        _declaration: $ => choice(
            $.function_clause,
            $.data_signature_only,
            $.record_signature_only,
            $.module_macro,
            $.open,
            $.infix,
            $.pattern,
            $.syntax,
            $.data,
            $.record,
            $.module,
            $.field,
            $.generalize,
            $.mutual,
            $.abstract,
            $.private,
            $.instance,
            $.macro,
            $.postulate,
            $.primitive,
            $.test,
        ),

        ////////////////////////////////////////////////////////////////////////
        ////////////////////////////////////////////////////////////////////////
        ////////////////////////////////////////////////////////////////////////
        //
        // Inline Declarations
        //
        ////////////////////////////////////////////////////////////////////////
        ////////////////////////////////////////////////////////////////////////
        ////////////////////////////////////////////////////////////////////////

        ////////////////////////////////////////////////////////////////////////
        // Function clauses
        ////////////////////////////////////////////////////////////////////////

        // Function declarations. The left hand side is parsed as an expression
        // to allow declarations like 'x::xs ++ ys = e', when '::' has higher
        // precedence than '++'.
        // function_clause also handle possibly dotted type signatures.
        function_clause: $ => choice(
            seq(
                alias($.lhs_decl, $.lhs),
                optional(alias($.rhs_decl, $.rhs)),
                optional($.where_clause),
            ),
            seq(
                alias($.lhs_defn, $.lhs),
                optional(alias($.rhs_defn, $.rhs)),
                optional($.where_clause),
            ),
        ),

        with_expressions: $ => seq('with', $.expr),

        lambda_clause: $ => seq(
            optional($.catchall_pragma),
            repeat($.atom),
            $._const_right_arrow,
            $.expr
        ),

        forall_bindings: $ => seq(
            $._typed_untyped_binding1,
            $._const_right_arrow
        ),



        // "DomainFreeBinding"
        untyped_binding: $ => maybeDotted(choice(
            seq($._binding_name),
            bracket(
              $._application,
              BKT_CURLS,
            ),
        )),

        _typed_bindings1: $ => (repeat1($.typed_binding)),

        // "TypedBindings"
        typed_binding: $ => choice(
            maybeDotted(bracket(
              seq($._application, ':', $.expr),
              BKT_PAREN,
              BKT_CURLS,
            )),
            bracket(
              $.open,
              BKT_PAREN,
            ),
            // seq('(', 'let', $._let_body, ')')
        ),

        _typed_untyped_binding1: $ => repeat1(choice(
            $.untyped_binding,
            $.typed_binding
        )),

        ////////////////////////////////////////////////////////////////////////
        // Do-notation
        ////////////////////////////////////////////////////////////////////////

        // NOTE: we are using $._with_expr instead of $.expr in $._do_stmt
        //       to prevent clashes in examples like "let a = b"

        _do_stmt: $ => alias($._with_expr, $.do_stmt),

        _do_stmt_where: $ => seq(
            alias($._with_expr, $.do_stmt),
            'where',
            alias($._lambda_where_block, $.do_where),
        ),

        ////////////////////////////////////////////////////////////////////////
        // Expressions
        ////////////////////////////////////////////////////////////////////////

        // NOTE: seq($._with_expr, '=', $.expr) is taken out
        expr: $ => choice(
            seq($._typed_bindings1, $._const_right_arrow, $.expr),
            seq($._atoms1         , $._const_right_arrow, $.expr),
            // seq($._with_expr      , '='                 , $.expr),
            prec(-1, $._with_expr), // lowest precedence
        ),

        // Level 1 Expressions: Application
        _with_expr: $ => seq(
            repeat(seq($._atoms1, '|')),
            $._application
        ),

        _application: $ => seq(
            repeat($.atom),
            $._expr2
        ),

        // Level 2 Expressions: Lambdas and lets
        do: $ => seq(
            'do',
            block($, choice(
                $._do_stmt,
                // $.do_let,
                $._do_stmt_where
            )),
        ),


        _let_only: $ => seq(
            'let',
            block($, $._declaration),
        ),

        _let_in: $ => seq(
            'let',

            optional($._indent),
            repeat(seq($._declaration, $._newline)),
            $._declaration,

            'in',
            $.expr,
        ),

        let: $ => choice(
            $._let_in,
            $._let_only,
        ),

        _atoms1: $ => (repeat1($.atom)), // right
        atom: $ => choice(
            $._atom_curly,
            $._atom_no_curly
        ),

        _atom_curly: $ => seq('{', optional($.expr), '}'),
        _atom_no_curly: $ => choice(
            $.qualified_name,
            $.literal,
            '?',
            "_",
            'Set',
            'Prop',
            'quote',
            'quoteTerm',
            'unquote',
            bracket(
              $.expr,
              BKT_CURL2,
              BKT_IDIOM,
              BKT_PAREN,
            ),
            bracket(
              seq(),
              BKT_CURL2,
              BKT_PAREN,
            ),
            seq('.', $.atom),
            $.record_assignments,
            $._const_ellipsis,
        ),

    }
});

////////////////////////////////////////////////////////////////////////
// Generic combinators
////////////////////////////////////////////////////////////////////////

function sepR(sep, rule) {
    return seq(rule, repeat(seq(sep, rule)))
}

function sepL(sep, rule) {
    return seq(repeat(seq(rule, sep)), rule)
}

function indent($, ...rule) {
    return seq(
        $._indent,
        ...rule,
        $._dedent
    );
}

// 1 or more $RULE ending with a NEWLINE
function block($, rules) {
    return indent($, repeat1(seq(rules, $._newline)));
}

////////////////////////////////////////////////////////////////////////
// Language-specific combinators
////////////////////////////////////////////////////////////////////////

function maybeDotted(rule) {
    return choice(
        rule,               // Relevant
        seq('.', rule),     // Irrelevant
        seq('..', rule),    // NonStrict
    );
}

function flatten(arrOfArrs) {
  return arrOfArrs.reduce((res, arr) => [...res, ...arr], []);
}

function bracketWith(fn, ...pairs) {
  return choice(...flatten(pairs).map(([left, right]) => fn(left, right)));
}

function bracket(expr, ...pairs) {
  return bracketWith((left, right) => seq(left, expr, right), ...pairs);
}
