legacy/corpus/grammar/function.txt
==================
Body only
==================

id = a

---

(source_file
    (function_clause
        (lhs
            (atom (qualified_name)))
        (rhs
            (expr (atom (qualified_name))))))

==================
Body with type signature
==================

id : A -> A -> A
id A a = a

---

(source_file
    (function_clause
        (lhs (function_name (qualified_name)))
        (rhs
            (expr (atom (qualified_name))
            (expr (atom (qualified_name))
            (expr (atom (qualified_name)))))))
    (function_clause
        (lhs
            (atom (qualified_name))
            (atom (qualified_name))
            (atom (qualified_name)))
        (rhs
            (expr (atom (qualified_name))))))

==================
Typed bindings
==================

f : (A : Set) (B : Set) (C : Set) -> A
g : (A B _ ? : Set) -> A

---

(source_file
    (function_clause
        (lhs (function_name (qualified_name)))
        (rhs
            (expr
            (typed_binding (atom (qualified_name)) (expr (atom)))
            (typed_binding (atom (qualified_name)) (expr (atom)))
            (typed_binding (atom (qualified_name)) (expr (atom)))
            (expr (atom (qualified_name))))))
    (function_clause
        (lhs (function_name (qualified_name)))
        (rhs
            (expr
            (typed_binding
                (atom (qualified_name))
                (atom (qualified_name))
                (atom)
                (atom)
                (expr (atom)))
            (expr (atom (qualified_name)))))))

==================
type signature with forall bindings
==================

f : forall {A B C} -> A -> A
g : {A : Set} -> A

---

(source_file
    (function_clause
        (lhs (function_name (qualified_name)))
        (rhs
            (expr (forall_bindings (untyped_binding
                (atom (qualified_name))
                (atom (qualified_name))
                (atom (qualified_name))))
            (expr (atom (qualified_name))
            (expr (atom (qualified_name)))))))
    (function_clause
        (lhs (function_name (qualified_name)))
        (rhs
            (expr (typed_binding (atom (qualified_name)) (expr (atom)))
            (expr (atom (qualified_name)))))))

==================
With-expressions
==================

f a with g a
... | b = _

---

(source_file
    (function_clause
        (lhs
            (atom (qualified_name))
            (atom (qualified_name))
            (with_expressions (expr
                (atom (qualified_name))
                (atom (qualified_name))))))
    (function_clause
        (lhs
            (atom)
            (atom (qualified_name)))
        (rhs
            (expr (atom)))))

==================
Idiom brackets
==================

x : _
x = (| if a then b else c |)

---

(source_file
    (function_clause
        (lhs (function_name (qualified_name)))
        (rhs (expr (atom))))
    (function_clause
        (lhs (atom (qualified_name)))
        (rhs
          (expr (atom (expr
            (atom (qualified_name))
            (atom (qualified_name))
            (atom (qualified_name))
            (atom (qualified_name))
            (atom (qualified_name))
            (atom (qualified_name))))))))


==================
Idiom brackets (Unicode)
==================

x : _
x = ⦇ if a then b else c ⦈

---

(source_file
    (function_clause
        (lhs (function_name (qualified_name)))
        (rhs (expr (atom))))
    (function_clause
        (lhs (atom (qualified_name)))
        (rhs
          (expr (atom (expr
            (atom (qualified_name))
            (atom (qualified_name))
            (atom (qualified_name))
            (atom (qualified_name))
            (atom (qualified_name))
            (atom (qualified_name))))))))
